MWPW-127128: Fixed rating section overlap

--- a/acrobat/blocks/eventwrapper/eventwrapper.css
+++ b/acrobat/blocks/eventwrapper/eventwrapper.css
@@ -37,6 +37,6 @@ body:not([data-current-event]) [data-event-name=onload] {
 }
 
 [data-current-event=complete] .fake-dc-wrapper,
-[data-current-event=complete] .dc-wrapper {
+[data-current-event=complete] #CID {
   top: 30px;
 }
